@@ -15,18 +15,6 @@ import de.dailab.jiactng.agentcore.util.IdFactory;
  * 
  * @author moekon
  */
-/**
- * @author moekon
- * 
- */
-/**
- * @author moekon
- *
- */
-/**
- * @author moekon
- * 
- */
 public class Session implements IFact {
 
   /** SerialVersionUID for Serialization */
@@ -106,7 +94,7 @@ public class Session implements IFact {
    *          time to live in milliseconds
    */
   public Session(ResultReceiver source, long timeToLive) {
-    this(IdFactory.createSessionId((source != null) ? source.hashCode() : Session.class.hashCode()), new Long(System
+    this(IdFactory.createSessionId((source != null) ? source.hashCode() : Session.class.hashCode()), Long.valueOf(System
         .currentTimeMillis()), source, new ArrayList<SessionEvent>());
     this.timeToLive = new Long(timeToLive);
   }
